--- a/recs-client/package.json
+++ b/recs-client/package.json
@@ -11,6 +11,8 @@
     "gen": "sozo build --typescript --manifest-path ../contracts/Scarb.toml --bindings-output ./src/dojo"
   },
   "dependencies": {
+    "@cartridge/connector": "^0.3.41",
+    "@cartridge/controller": "^0.3.41",
     "@dojoengine/core": "1.0.0-alpha.6",
     "@dojoengine/create-burner": "1.0.0-alpha.6",
     "@dojoengine/react": "1.0.0-alpha.6",
@@ -18,19 +20,32 @@
     "@dojoengine/state": "1.0.0-alpha.6",
     "@dojoengine/torii-client": "1.0.0-alpha.6",
     "@dojoengine/utils": "1.0.0-alpha.6",
+    "@heroicons/react": "^2.1.5",
     "@latticexyz/react": "^2.0.12",
     "@latticexyz/utils": "^2.0.12",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
+    "@starknet-react/chains": "^0.1.7",
+    "@starknet-react/core": "^2.9.0",
+    "@types/chess.js": "^0.13.7",
     "autoprefixer": "^10.4.20",
+    "chess.js": "1.0.0-beta.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.2.1",
     "ethers": "^5.7.2",
     "lucide-react": "^0.429.0",
     "mobx": "^6.9.0",
     "postcss": "^8.4.41",
     "proxy-deep": "^3.1.1",
     "react": "^18.2.0",
+    "react-chessboard": "^4.7.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "rxjs": "^7.8.1",
     "starknet": "6.11.0",
@@ -38,7 +53,9 @@
     "tailwindcss": "^3.4.10",
     "tailwindcss-animate": "^1.0.7",
     "vite-plugin-top-level-await": "^1.3.1",
-    "vite-plugin-wasm": "^3.2.2"
+    "vite-plugin-mkcert": "^1.17.6",
+    "vite-plugin-wasm": "^3.2.2",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/node": "^20.16.1",
