--- a/recs-client/package.json
+++ b/recs-client/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@starknet-react/chains": "^0.1.7",
     "@starknet-react/core": "^2.9.0",
     "@types/chess.js": "^0.13.7",
@@ -52,8 +53,8 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.10",
     "tailwindcss-animate": "^1.0.7",
-    "vite-plugin-top-level-await": "^1.3.1",
     "vite-plugin-mkcert": "^1.17.6",
+    "vite-plugin-top-level-await": "^1.3.1",
     "vite-plugin-wasm": "^3.2.2",
     "zustand": "^4.5.5"
   },
