--- a/recs-client/package.json
+++ b/recs-client/package.json
@@ -29,6 +29,8 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@starknet-react/chains": "^0.1.7",
     "@starknet-react/core": "^2.9.0",
