--- a/recs-client/package.json
+++ b/recs-client/package.json
@@ -39,6 +39,7 @@
     "chess.js": "1.0.0-beta.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.2.1",
     "ethers": "^5.7.2",
     "lucide-react": "^0.429.0",
