--- a/recs-client/package.json
+++ b/recs-client/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toggle": "^1.1.0",
@@ -42,6 +43,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.2.1",
     "ethers": "^5.7.2",
+    "framer-motion": "^11.9.0",
     "lucide-react": "^0.429.0",
     "mobx": "^6.9.0",
     "postcss": "^8.4.41",
